Major development. Added 3D functionality. Version 1.3.

--- a/comets_simplified/.classpath
+++ b/comets_simplified/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/usr/local/share/java/glpk-java-1.0.19.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jogl"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
