--- a/.classpath
+++ b/.classpath
@@ -6,35 +6,32 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/colt/lib/colt.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/colt/lib/concurrent.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/commons-lang3-3.9/commons-lang3-3.9.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/commons-math3-3.6.1/commons-math3-3.6.1-tools.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/commons-rng-1.0/commons-rng-client-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/commons-rng-1.0/commons-rng-core-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/JMatIO/lib/jamtio.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/JMatIO/JMatIO-041212/lib/jmatio.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/gluegen.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/gluegen-rt-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/junit/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/junit/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jdistlib-0.4.5-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/joal.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/joal-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/jogl-all.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/comets/lib/jogl/jogamp-all-platforms/jar/jogl-all-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/gurobi952/win64/lib/gurobi.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/lib/jna-5.12.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/lib/jna-jpms-5.12.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/lib/jna-platform-5.12.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/lib/jna-platform-jpms-5.12.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/lib/protobuf-java-2.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/ortools-java-9.3.10497.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/ortools-java-9.3.10497-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/ortools-java-9.3.10497-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/ortools-win32-x86-64-9.3.10497.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ilija/or-tools_VisualStudio2022-64bit_v9.3.10497/or-tools_VisualStudio2022-64bit_v9.3.10497/ortools-win32-x86-64-9.3.10497-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/colt/lib/colt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/colt/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/commons-lang3-3.9/commons-lang3-3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/commons-rng-1.0/commons-rng-client-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/commons-rng-1.0/commons-rng-core-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/JMatIO/lib/jmatio.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/JMatIO/JMatIO-041212/lib/jmatio.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/gluegen.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/gluegen-rt-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/junit/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jdistlib-0.4.5-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/joal.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/joal-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/jogl-all.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/jogl/jogamp-all-platforms/jar/jogl-all-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/lib/jna-5.12.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/lib/jna-jpms-5.12.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/lib/jna-platform-5.12.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/lib/jna-platform-jpms-5.12.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/lib/protobuf-java-2.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/ortools-java-9.3.10497.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/ortools-java-9.3.10497-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/ortools-java-9.3.10497-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/ortools-win32-x86-64-9.3.10497.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ilija/comets_windows/comets_windows/comets_2.12.3/lib/or-tools/9.3.1049/ortools-win32-x86-64-9.3.10497-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
